--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.4.0",
     "axios": "^0.19.2",
     "craco-less": "^1.17.0",
+    "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
